ros_ws/log/build_2026-07-03_02-16-26/partea/stderr.log
  File "/home/abril/Documents/PrincipiosRobotica/Prueba/TP_final_robotica/ros_ws/install/partea/lib/python3.10/site-packages/partea/slam_node.py", line 213
    ranges(ranges <= msg.range_min) = np.inf  # descartar tambien rangos invalidos por debajo del minimo
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: cannot assign to function call here. Maybe you meant '==' instead of '='?

